--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -118,7 +118,7 @@ import StackAlt from './assets/stackalt.svg';
 
 <article style={{borderRadius: '4px', boxShadow: '0px 2px 6px rgba(0, 0, 0, 0.1)', padding: '3rem', border: '1px solid hsla(203, 50%, 30%, 0.15)'}}>
 
-This design system (currently in progress) is a set of rules, guidelines and best practices for creating and presenting content in a consistent and cohesive manner. It provides direction on how to use language, tone, formatting, components, and other elements of content creation to ensure a unified and effective communication approach. 
+This design system is a set of rules, guidelines and best practices for creating and presenting content in a consistent and cohesive manner. It provides direction on how to use language, tone, formatting, components, and other elements of content creation to ensure a unified and effective communication approach. 
 
 The ultimate goal is to create a tech-agnostic, web component based design system that will unify the various interfaces and user experiences across different products at CMS-MACBIS.
 
