Change naming for footers and headers, other changes

--- a/src/stories/ContentGuideIntroduction.stories.mdx
+++ b/src/stories/ContentGuideIntroduction.stories.mdx
@@ -156,7 +156,7 @@ Treat this style guide as a living document. Watch this section for updates on w
 <h2>Guiding resources</h2>
 
 <p>
-This guide relies on input from business owners, designers, subject matter experts, and end users. It also takes into account content design best practices. We encourage you to <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-mjBv4EkPk5lhOE_w0kVYfVG5W5K4mqCm1fS2sgwM4ifpYA/viewform">submit feedback and questions</a>.
+This guide relies on input from business owners, designers, subject matter experts, and end users. It also takes into account content design best practices. We encourage you to <a href="https://qmacbis.atlassian.net/wiki/spaces/HCD/pages/3190063113">submit feedback and questions</a>.
 
 Some key resources that inform the guide:
 
@@ -165,6 +165,7 @@ Some key resources that inform the guide:
 <li><a href="https://designsystem.digital.gov/">The U.S. Web Design System</a></li>
 <li><a href="http://content-guide.18f.gov">18F Content Guide</a></li>
 <li><a href="https://design.va.gov/content-style-guide/">VA.gov content style guide</a></li>
+<li><a href="https://qmacbis.atlassian.net/wiki/spaces/HCD/pages/3190063113">MACPRO style guide</a></li>
 </ul>
 
 </p>
