--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -114,7 +114,7 @@ import StackAlt from './assets/stackalt.svg';
   `}
 </style>
 
-<h1>MACBIS Design System</h1>
+<h1>MACBIS Harmony Design System</h1>
 
 <article style={{borderRadius: '4px', boxShadow: '0px 2px 6px rgba(0, 0, 0, 0.1)', padding: '3rem', border: '1px solid hsla(203, 50%, 30%, 0.15)'}}>
 
