--- a/src/stories/ContentGuideIntroduction.stories.mdx
+++ b/src/stories/ContentGuideIntroduction.stories.mdx
@@ -119,11 +119,10 @@ import StackAlt from './assets/stackalt.svg';
 
 <h2>Purpose</h2>
 
-
 This is the house content style guide for the Harmony Design System. It will guide  creators in writing clear, consistent content throughout the product ecosystem. This guide is the source of truth for content. 
 
 <h2>Scope</h2>
-<p>This guide applies to any written content within the OneMAC product. It covers content structure, best practices for component content, and content-specific accessibility considerations.</p>
+<p>This guide applies to any written content within the Harmony Design System product. It covers content structure, best practices for component content, and content-specific accessibility considerations.</p>
 
 <h2>How to use</h2>
 <p>
@@ -156,7 +155,7 @@ Treat this style guide as a living document. Watch this section for updates on w
 <h2>Guiding resources</h2>
 
 <p>
-This guide relies on input from business owners, designers, subject matter experts, and end users. It also takes into account content design best practices. We encourage you to <a href="mailto: cmcs_hcd_unification_team@cms.hhs.gov">submit feedback and questions</a>.
+This guide relies on input from business owners, designers, subject matter experts, and end users. It also takes into account content design best practices. We encourage you to submit feedback and questions here: <b>cmcs_hcd_unification_team@cms.hhs.gov</b>.
 
 Some key resources that inform the guide:
 
